objects/Copado_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Admin_Password__c</fullName>
        <label>Admin_Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Username__c</fullName>
        <inlineHelpText>used in the batch process to connect to the Admin org (this one)</inlineHelpText>
        <label>Admin_Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Lead_Owner__c</fullName>
        <label>Default Lead Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_Server_URL__c</fullName>
        <inlineHelpText>use for European server.
If this server url empty then is ignored.</inlineHelpText>
        <label>EU Server URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Last_Data_Export__c</fullName>
        <label>Last Data Export</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_run_transaction_batch__c</fullName>
        <label>Last run transaction batch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Max_top_up_value__c</fullName>
        <label>Max top-up value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurly_API_URL__c</fullName>
        <label>Recurly API URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurly_API_key__c</fullName>
        <inlineHelpText>API Key used for authentication. Sandbox key and Production key are different.</inlineHelpText>
        <label>Recurly API key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Force_com_site__c</fullName>
        <label>Secure Force.com site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Server_URL__c</fullName>
        <label>Server_URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stripe_key__c</fullName>
        <label>Stripe key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stripe_secret__c</fullName>
        <label>Stripe secret</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Copado Settings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Last_Data_Export__c</columns>
        <columns>Max_top_up_value__c</columns>
        <columns>Server_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>